# eoapi-eks-cdk

./: .gitignore  README.md  app.py  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
data/: collection.json  items.ndjson
docs/: DEPLOYMENT.md  TROUBLESHOOTING.md
eoapi_eks_cdk/: eoapi_eks_cdk_stack.py
iam/: ebs-csi-trust-policy.template.json
k8s/: gp3-storageclass.yaml  jaeger.yaml  otel-instrumentation.yaml
tests/unit/: test_eoapi_eks_cdk_stack.py
