[project]
name = "eoapi-eks-cdk"
version = "1.0.0"
description = "eoAPI geospatial stack on AWS EKS, provisioned with the AWS CDK (Python)"
requires-python = ">=3.12"
license = { text = "MIT" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]
